--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-
-
-/.obsidian/workspace.json
+.obsidian/workspace.json
+.obsidian/workspace
+.obsidian/plugins
+.obsidian/appearance.json
+.obsidian/snippets
